# robot_perception_manager

./: .gitignore  README.md  demo.cast
perception_interfaces/: CMakeLists.txt  package.xml
perception_interfaces/action/: StartDetection.action
perception_interfaces/msg/: Detection.msg
perception_manager/: CMakeLists.txt  package.xml
perception_manager/config/: perception_params.yaml
perception_manager/launch/: perception.launch.py
perception_manager/src/: camera_tf_broadcaster.cpp  perception_manager.cpp
